--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   },
   "require": {
-    "limenius/liform": "dev-php8"
+    "limenius/liform": "dev-php8-symfony6"
   },
   "minimum-stability": "stable"
 }
